// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SpecificationRule custom matchers matches failing assertion 1`] = `
Array [
  Object {
    "change": Object {
      "location": Object {
        "conceptualLocation": Object {},
        "conceptualPath": Array [],
        "jsonPath": "",
        "kind": "specification",
      },
      "value": Object {
        "info": Object {
          "title": "Empty",
          "version": "0.0.0",
        },
        "openapi": "3.1.3",
      },
    },
    "condition": "match expected shape",
    "docsLink": undefined,
    "error": "Expected a partial match",
    "expected": "{\\"info\\":{\\"license\\":{}}}",
    "isMust": true,
    "isShould": false,
    "name": "operation description",
    "passed": false,
    "received": "{\\"openapi\\":\\"3.1.3\\",\\"paths\\":{},\\"info\\":{\\"version\\":\\"0.0.0\\",\\"title\\":\\"Empty\\"}}",
    "where": "requirement for specification",
  },
]
`;

exports[`SpecificationRule custom matchers matches passing assertion 1`] = `
Array [
  Object {
    "change": Object {
      "location": Object {
        "conceptualLocation": Object {},
        "conceptualPath": Array [],
        "jsonPath": "",
        "kind": "specification",
      },
      "value": Object {
        "info": Object {
          "license": Object {
            "name": "MIT",
            "url": "some-url",
          },
          "title": "Empty",
          "version": "0.0.0",
        },
        "openapi": "3.1.3",
      },
    },
    "condition": "match expected shape",
    "docsLink": undefined,
    "error": undefined,
    "expected": undefined,
    "isMust": true,
    "isShould": false,
    "name": "operation description",
    "passed": true,
    "received": undefined,
    "where": "requirement for specification",
  },
]
`;

exports[`SpecificationRule requirement failing assertion 1`] = `
Array [
  Object {
    "change": Object {
      "location": Object {
        "conceptualLocation": Object {},
        "conceptualPath": Array [],
        "jsonPath": "",
        "kind": "specification",
      },
      "value": Object {
        "info": Object {
          "title": "Empty",
          "version": "0.0.0",
        },
        "openapi": "3.1.3",
      },
    },
    "condition": "must contain x-stability",
    "docsLink": undefined,
    "error": "spec does not have x-stability",
    "expected": undefined,
    "isMust": true,
    "isShould": false,
    "name": "operation description",
    "passed": false,
    "received": undefined,
    "where": "requirement for specification",
  },
]
`;

exports[`SpecificationRule requirement passing assertion 1`] = `
Array [
  Object {
    "change": Object {
      "location": Object {
        "conceptualLocation": Object {},
        "conceptualPath": Array [],
        "jsonPath": "",
        "kind": "specification",
      },
      "value": Object {
        "info": Object {
          "title": "Empty",
          "version": "0.0.0",
        },
        "openapi": "3.1.3",
        "x-stability": "abc",
      },
    },
    "condition": "must contain x-stability",
    "docsLink": undefined,
    "error": undefined,
    "expected": undefined,
    "isMust": true,
    "isShould": false,
    "name": "operation description",
    "passed": true,
    "received": undefined,
    "where": "requirement for specification",
  },
]
`;
